--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -13,19 +13,20 @@
 }
 nav {
   width: 100%;
-  padding: 0.5rem;
+  padding: 1.2rem 0.4rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: #ffc936;
+  gap: 4rem;
 }
 .navigation-item {
   width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1.5rem;
-  font-size: 18px;
+  gap: 1rem;
+  font-size: 16px;
 }
 .btn {
   text-transform: capitalize;
