--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -9,11 +9,11 @@
 .container {
   display: flex;
   flex-flow: column nowrap;
-  gap: 5rem;
+  gap: 2rem;
 }
 nav {
   width: 100%;
-  padding: 1.2rem 0.4rem;
+  padding: 1.2rem 0.6rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -21,7 +21,6 @@ nav {
   gap: 4rem;
 }
 .navigation-item {
-  width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,7 +53,7 @@ nav {
 }
 footer {
   width: 100%;
-  background-color: #333;
+  background-color: #14213d;
   height: 20rem;
 }
 .footer-item-topic {
