--- a/core/templates/core/pages/sites_list.html
+++ b/core/templates/core/pages/sites_list.html
@@ -1,13 +1,25 @@
 {% extends 'core/pages/base.html' %}
 
 {% block content %}
-<a href="{% url 'add-site' %}"><i class="fas fa-add"></i></a>
-{% for site in sites %}
-<div class="sites">
-    <h1>{{ site.name }}</h1>
-    <h2>{{ site.url }}</h2>
-    <a href="{% url 'edit-site' site.id %}"><i class="fas fa-edit"></i></a>
-    <a href="{% url 'delete-site' site.id %}"><i class="fas fa-trash"></i></a>
+<span class="add-area"><a class='add-link' href="{% url 'add-site' %}">Adicione um site<i class="fas fa-add"></i></a></span>
+
+<div class="sites-list">
+    {% for site in sites %}
+    <div class="sites">
+        <section class="site-infos">
+            <span class="site-tag">
+                <h2>{{ site.name }}</h2>
+                <i class="fas fa-circle"></i>
+            </span>
+            <h3>{{ site.url }}</h3>
+        </section>
+        <section class="site-actions">
+            <a href="{% url 'edit-site' site.id %}"><i class="fas fa-edit"></i></a>
+            <a href="{% url 'delete-site' site.id %}"><i class="fas fa-trash"></i></a>
+        </section>
+    </div>
+    {% empty %}
+    <p class="blank-list">Não há nada aqui</p>
+    {% endfor %}
 </div>
-{% endfor %}
 {% endblock %}
