--- a/core/templates/core/pages/sites_list.html
+++ b/core/templates/core/pages/sites_list.html
@@ -1,7 +1,7 @@
 {% extends 'core/pages/base.html' %}
 
 {% block content %}
-<span class="add-area"><a class='add-link' href="{% url 'add-site' %}">Adicione um site<i class="fas fa-add"></i></a></span>
+<span class="add-area"><a class='add-link' href="{% url 'add-site' %}">Adicione um site</a><i class="fas fa-add"></i></span>
 
 <div class="sites-list">
     {% for site in sites %}
@@ -9,7 +9,11 @@
         <section class="site-infos">
             <span class="site-tag">
                 <h2>{{ site.name }}</h2>
-                <i class="fas fa-circle"></i>
+                {% if site.id in down_urls %}
+                <i class="fas fa-circle red-icon"></i>
+                {% else %}
+                <i class="fas fa-circle green-icon"></i>
+                {% endif %}
             </span>
             <h3>{{ site.url }}</h3>
         </section>
