--- a/core/templates/core/pages/base.html
+++ b/core/templates/core/pages/base.html
@@ -41,11 +41,11 @@
           <ul class="navigation-item">
             <li class="nav-item-topic"><a href="{% url 'sites-list' %}">meus sites</a></li>
             {% if user.is_authenticated %}
-            <li><a href="/accounts/logout">Sair</a></li>
-            <li>{{user.username.capitalize}}</li>
+            <li class="nav-item-topic"><a href="/accounts/logout">Sair</a></li>
+            <li class="nav-item-topic">{{user.username.capitalize}}</li>
             {% else %}
-            <li><a href="/accounts/login">Entrar</a></li>
-            <li><a href="/accounts/register">Registrar</a></li>
+            <li class="nav-item-topic"><a href="/accounts/login">Entrar</a></li>
+            <li class="nav-item-topic"><a href="/accounts/register">Registrar</a></li>
             {% endif %}
           </ul>
         </section>
