--- a/core/static/css/sites.css
+++ b/core/static/css/sites.css
@@ -1,7 +1,8 @@
-h2 {
+.site-name a {
   font-size: 24px;
   display: inline;
   text-transform: uppercase;
+  color: #333;
 }
 .content {
   padding: 1rem;
@@ -18,7 +19,7 @@ h2 {
 .sites {
   display: flex;
   flex-flow: column nowrap;
-  gap: 1rem;
+  gap: 2rem;
   padding: 2rem;
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
@@ -30,7 +31,7 @@ h2 {
 .site-tag {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 .site-actions {
   display: flex;
@@ -64,4 +65,7 @@ h2 {
 }
 .green-icon {
   color: green;
+}
+.fas.fa-circle {
+  padding-left: 2rem;
 }
