Importação das views arrumadas

--- a/core/templates/core/pages/base.html
+++ b/core/templates/core/pages/base.html
@@ -59,11 +59,14 @@
     </div>
     <footer>
       <ul class="footer-item">
-        <li class="footer-item-topic">a</li>
-        <li class="footer-item-topic">a</li>
-        <li class="footer-item-topic">a</li>
-        <li class="footer-item-topic">a</li>
+        <li class="footer-item-topic">Oops</li>
+
       </ul>
+      <ul class="footer-item">
+        <li class="footer-item-topic">Colaboradores</li>
+        <li class="footer-item-topic">Bia</li>
+        <li class="footer-item-topic">Breno</li>
+        <li class="footer-item-topic">Victor</li>
     </footer>
   </div>
 </body>
