--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -54,11 +54,16 @@ nav {
   font-weight: bold;
 }
 footer {
-  width: 100%;
   background-color: #14213d;
-  height: 20rem;
+  padding: 5rem;
+  display: flex;
+  gap: 4rem;
+  justify-content: center;
 }
 .footer-item-topic {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 2rem;
   color: #fff;
 }
 nav section {
