--- a/core/templates/core/pages/site-view.html
+++ b/core/templates/core/pages/site-view.html
@@ -3,7 +3,7 @@
 <h1>{{ site.name }}</h1>
 <h2>{{ site.url }}</h2>
 
-<p>{{ status.request_code }}</p>
-<p>{{ status.last_check }}</p>
+<p>Código de retorno: {{ status.request_code }}</p>
+<p>Última checagem: {{ status.last_check }}</p>
 <p></p>
 {% endblock %}
