--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -17,7 +17,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   background-color: #ffc936;
-  gap: 4rem;
+  gap: 2rem;
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
 .navigation-item {
@@ -63,4 +63,9 @@ footer {
 }
 nav section {
   width: 80%;
+}
+
+nav img {
+  width: 90px;
+  margin-left: 2%;
 }
