--- a/core/templates/core/pages/base.html
+++ b/core/templates/core/pages/base.html
@@ -34,7 +34,8 @@
 
       <nav>
         <ul class="navigation-item">
-          <li class="nav-item-topic page-name"><a href="{% url 'index' %}">Oops</a></li>
+          <li class="nav-item-topic page-name"><a href="{% url 'index' %}"><img clas="logo" src="https://user-images.githubusercontent.com/101004042/180075632-087f1da5-d1b8-4ef8-abe5-539ca52a89e6.png">
+          </a></li>
         </ul>
         <section>
 
