--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,18 @@
 {% extends 'core/pages/base.html' %}
 {% block content %}
 {% load crispy_forms_tags %}
-<h4>Login</h4>
-<form method="POST">
-    {% csrf_token %}
-    <input type="hidden" name="next" value="{{ next }}">
-    {{ form|crispy }}
-    <button type="submt">Entrar</button>
-</form>
-<p>Quer criar uma conta? <a href="/accounts/register">Entre aqui.</a></p>
+<div class="pg_login">
+    <h4>Login</h4>
+    <div class="questionario_login">
+        <form method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="next" value="{{ next }}">
+            {{ form|crispy }}
+            <button type="submt">Entrar</button>
+        </form>
+    </div>
+    <div class="accounts">
+    <p>Quer criar uma conta? <a href="/accounts/register">Entre aqui.</a></p>
+    </div>
+</div>    
 {% endblock %}
