--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,12 +1,14 @@
 {% extends 'core/pages/base.html' %}
 {% block content %}
 {% load crispy_forms_tags %}
-<h4>Registro</h4>
+<div class="logineregistro">
+    <h4>Registro</h4>
 <form method="POST">
     {% csrf_token %}
     <input type="hidden" name="next" value="{{ next }}">
     {{ form|crispy }}
     <button type="submt">Registrar</button>
 </form>
-<p>Já possui uma conta? <a href="/accounts/login">Entre aqui.</a></p>
+<p>Já possui uma conta? <a href="/accounts/login" style="color:yellow;">Entre aqui.</a></p>
+</div>
 {% endblock %}
