--- a/core/static/css/sites.css
+++ b/core/static/css/sites.css
@@ -1,27 +1,28 @@
-.site-name a {
-  font-size: 24px;
-  display: inline;
-  text-transform: uppercase;
-  color: #333;
-}
+
 .content {
-  padding: 1rem;
   display: flex;
   flex-flow: column nowrap;
-  gap: 3.2rem;
+  gap: 3rem;
+  padding: 5% 10%;
+  background-color: black;
+/*   height: 47rem; */
 }
 .sites-list {
   display: flex;
   flex-direction: column;
   gap: 4rem;
   justify-content: center;
+  height: 35rem;
 }
 .sites {
   display: flex;
   flex-flow: column nowrap;
-  gap: 2rem;
-  padding: 2rem;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+  gap: 1rem;
+  padding: 5%;
+  box-shadow: 3px 3px 3px rgb(0 0 0 / 20%);
+  border: 5px #ffc936 solid;
+  border-radius: 15px;
+  height: 27%;
 }
 .site-infos {
   display: flex;
@@ -31,7 +32,7 @@
 .site-tag {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
 }
 .site-actions {
   display: flex;
@@ -46,19 +47,30 @@
 .fas.fa-edit {
   color: #aaaaaa;
 }
+.fa-brands, .fab {
+  font-family: "Font Awesome 6 Brands";
+  font-weight: 400;
+  font-size: xxx-large;
+}
 .add-link {
-  font-size: 18px;
+  border-radius: 10px;
+  padding: 5%;
+  font-size: 32px;
+  width: 90%;
+  font-weight: bolder;
 }
 .add-area {
-  display: flex;
-  width: 50%;
   justify-content: center;
   align-items: center;
-  border-radius: 8px;
   display: flex;
   gap: 1rem;
-  padding: 1rem;
-  background-color: #e5e5e5;
+  background-color: #ffc936;
+  box-shadow: 1px 2px 20px 4px #ffc936;
+  border-radius: 10px;
+  padding: 5%;
+  font-size: 17px;
+  width: 90%;
+  font-weight: bolder;
 }
 .red-icon {
   color: red;
@@ -66,14 +78,35 @@
 .green-icon {
   color: green;
 }
-.fas.fa-circle {
-  padding-left: 2rem;
-}
-.pagination {
-  align-self: center;
-}
-.pagination span {
+
+.form-registro {
+  justify-content: center;
+  align-items: center;
   display: flex;
-  column-gap: 1rem;
-  font-size: 20px;
+  gap: 0.5rem;
+  background-color: #ffc936;
+  box-shadow: 1px 2px 20px 4px #ffc936;
+  border-radius: 10px;
+  padding: 5%;
+  font-size: 17px;
+  /* width: 90%; */
+  font-weight: bolder;
+  flex-direction: column;
+}
+
+.botao-form {
+  background-color: black;
+  color: #ffc936;
+  width: 55%;
+  height: 20px;
+}
+
+.formulario {
+  height: 45rem;
+/*   padding-top: 75%; */
+}
+
+.cor-nome-site {
+  color: #ffc936;
+  font-size: 30px;
 }
